# module/auth/auth.route.mjs
@@ -1,5 +1,6 @@
 import express from "express"
-import { register, login, send, verify, refreshToken } from "./auth.controller.mjs"
+import { register, login, send, verify, refreshToken, me } from "./auth.controller.mjs"
+import Auth from "../../common/middleware/AuthMiddleware.mjs";
 
 const router = express.Router()
 
@@ -8,5 +9,6 @@ router.post("/login", login);
 router.post("/send-otp", send);
 router.post("/verify-otp", verify);
 router.post("/refresh-token", refreshToken);
+router.get("/me", Auth, me);
 
 export default router;
